# HashCracker

./: README.md  check_gpu.py  requirements.txt
brut/: argon2_brute.py  base_cracker.py  bcrypt_brute.py  main_bruteforce.py  md5_brute.py  sha1_brute.py
brut/rust_cracker/: Cargo.toml  pyproject.toml
brut/rust_cracker/src/: lib.rs
